--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,69 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow-y: scroll; */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .App {
   height: 100vh;
-  font-family: "Epilogue", sans-serif;
+  font-family: 'Epilogue', sans-serif;
 }
 
 .loading {
   align-items: center;
   display: flex;
   justify-content: center;
+}
+
+/* Estilizando a barra de rolagem para navegadores WebKit */
+/* Largura e altura */
+::-webkit-scrollbar {
+  width: 8px; /* Largura da barra de rolagem */
+  height: 10px; /* Altura da barra de rolagem */
+}
+
+/* Cor do fundo */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Cor de fundo da barra de rolagem */
+}
+
+/* Cor do indicador (o "botão" que você move) */
+::-webkit-scrollbar-thumb {
+  background: #888; /* Cor do indicador da barra de rolagem */
+  border-radius: 5px; /* Raio de borda para suavizar as bordas */
+}
+
+/* Hover do indicador */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Cor do indicador ao passar o mouse */
+}
+
+/* Estilizando a barra de rolagem para navegadores Gecko */
+/* Largura e altura */
+::-moz-scrollbar {
+  width: 8px; /* Largura da barra de rolagem */
+/* Altura da barra de rolagem */
+}
+
+/* Cor do fundo */
+::-moz-scrollbar-track {
+  background: #f1f1f1; /* Cor de fundo da barra de rolagem */
+}
+
+/* Cor do indicador (o "botão" que você move) */
+::-moz-scrollbar-thumb {
+  background: #888; /* Cor do indicador da barra de rolagem */
+  border-radius: 5px; /* Raio de borda para suavizar as bordas */
+}
+
+/* Hover do indicador */
+::-moz-scrollbar-thumb:hover {
+  background: #555; /* Cor do indicador ao passar o mouse */
 }
