--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -64,10 +64,14 @@
 }
 
 .sidebar_user-name {
+  align-items: center;
   color: #444955;
   cursor: default;
+  display: flex;
   font-size: 16px;
   font-weight: 400;
+  height: 36px;
   letter-spacing: 0.5px;
   text-transform: capitalize;
+  width: 100%;
 }
