fix: not found page

--- a/src/pages/NotFound/styles.css
+++ b/src/pages/NotFound/styles.css
@@ -5,6 +5,11 @@
   flex-direction: column;
   height: 100%;
   justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 99;
 }
 
 .page-not-found_container {
